--- a/paper/related.tex
+++ b/paper/related.tex
@@ -98,8 +98,8 @@ based on the weights of the edges between pairs of clusters.
 
 \subsection{Cluster characterisation}
 While visualisation has gained prominence as a crucial component of scientific
-discovery, justification, and communication \todo{Add Cites: maybe Gelman?
-Tufte?}, visually representing evolving spatial data is a challenging old
+discovery, justification, and communication~\cite{tufte1998visual}, visually
+representing evolving spatial data is a challenging old
 problem~\citep{monmonier1990strategies,andrienko2003exploratory,ferreira2015visual,Zheng2016}.
 
 Most geographic data is naturally bidimensional and maps work well in this
