--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -1,12 +1,132 @@
 % Encoding: UTF-8
 
+@book{sampson2012great,
+  title={Great American city: Chicago and the enduring neighborhood effect},
+  author={Sampson, Robert J},
+  year={2012},
+  publisher={University of Chicago Press}
+}
+@book{galster2019making,
+  title={Making our neighborhoods, making our selves},
+  author={Galster, George C},
+  year={2019},
+  publisher={University of Chicago Press}
+}
+@article{Kwan2018,
+author = {Mei-Po Kwan},
+title = {The Limits of the Neighborhood Effect: Contextual Uncertainties in Geographic, Environmental Health, and Social Science Research},
+journal = {Annals of the American Association of Geographers},
+volume = {108},
+number = {6},
+pages = {1482-1490},
+year  = {2018},
+publisher = {Taylor & Francis},
+doi = {10.1080/24694452.2018.1453777}
+}
+@inproceedings{rey2018spatio,
+  title={Spatio-temporal analysis of socioeconomic neighborhoods: The Open Source Longitudinal Neighborhood Analysis Package (OSLNAP)},
+  author={Rey, Sergio and Knaap, Elijah and Han, Su and Wolf, Levi and Kang, Wei},
+  booktitle={Proceedings of the 17th Python in Science Conference (SciPy 2018)},
+  pages={121--128},
+  year={2018}
+}
+
+@misc{tufte1998visual,
+  title={Visual explanations: images and quantities, evidence and narrative},
+  author={Tufte, Edward R and McKay, Susan R and Christian, Wolfgang and Matey, James R},
+  year={1998},
+  publisher={AIP}
+}
+@article{li2018new,
+  title={A new urban typology model adapting data mining analytics to examine dominant trajectories of neighborhood change: A case of Metro Detroit},
+  author={Li, Yuchen and Xie, Yichun},
+  journal={Annals of the American Association of Geographers},
+  volume={108},
+  number={5},
+  pages={1313--1337},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+@article{Reades2019,
+author = {Jonathan Reades and Jordan De Souza and Phil Hubbard},
+title ={Understanding urban gentrification through machine learning},
+journal = {Urban Studies},
+volume = {56},
+number = {5},
+pages = {922-942},
+year = {2019},
+doi = {10.1177/0042098018789054}
+}
+
+@article{Shelton2019,
+author = {Taylor Shelton and Ate Poorthuis},
+title = {The Nature of Neighborhoods: Using Big Data to Rethink the Geographies of Atlanta’s Neighborhood Planning Unit System},
+journal = {Annals of the American Association of Geographers},
+volume = {0},
+number = {0},
+pages = {1-21},
+year  = {2019},
+publisher = {Taylor & Francis},
+doi = {10.1080/24694452.2019.1571895}
+}
+
+@book{stone2015urban,
+  title={Urban neighborhoods in a new era: Revitalization politics in the postindustrial city},
+  author={Stone, Clarence N and Stoker, Robert P and Betancur, John and Clarke, Susan E and Dantico, Marilyn and Horak, Martin and Mossberger, Karen and Musso, Juliet and Sellers, Jefferey M and Shiau, Ellen and others},
+  year={2015},
+  publisher={University of Chicago Press}
+}
+@book{looker2015nation,
+  title={A nation of neighborhoods: imagining cities, communities, and democracy in postwar America},
+  author={Looker, Benjamin},
+  year={2015},
+  publisher={University of Chicago Press}
+}
+
+@article{Abbott1997,
+    author = {Abbott, Andrew},
+    title = "{Of Time and Space: The Contemporary Relevance of the Chicago School}",
+    journal = {Social Forces},
+    volume = {75},
+    number = {4},
+    pages = {1149-1182},
+    year = {1997},
+    month = {06},
+    issn = {0037-7732},
+    doi = {10.1093/sf/75.4.1149}
+}
+
+
+
+@incollection{van2012neighbourhood,
+  title={Neighbourhood effects research: New perspectives},
+  author={Van Ham, Maarten and Manley, David and Bailey, Nick and Simpson, Ludi and Maclennan, Duncan},
+  booktitle={Neighbourhood effects research: New perspectives},
+  pages={1--21},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{Poorthuis2018,
+author = {Poorthuis, Ate},
+title = {How to Draw a Neighborhood? The Potential of Big Data, Regionalization, and Community Detection for Understanding the Heterogeneous Nature of Urban Neighborhoods},
+journal = {Geographical Analysis},
+volume = {50},
+number = {2},
+pages = {182-203},
+doi = {10.1111/gean.12143},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gean.12143},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/gean.12143},
+year = {2018}
+}
+
+
 @Article{Chen2017,
   author    = {Chen, Wei and Huang, Zhaosong and Wu, Feiran and Zhu, Minfeng and Guan, Huihua and Maciejewski, Ross},
   title     = {VAUD: A Visual Analysis Approach for Exploring Spatio-Temporal Urban Data},
   journal   = {IEEE Transactions on Visualization \& Computer Graphics},
   year      = {2017},
-  number    = {1},
-  pages     = {1--1},
   groups    = {VIS},
   publisher = {IEEE},
 }
@@ -20,12 +140,12 @@
   year={1990},
   publisher={University of Toronto Press}
 }
-
-
-
-
-
-
+@article{hulchanski2007three,
+  title={The three cities within Toronto: Income polarization among Toronto's neighbourhoods, 1970-2005},
+  author={Hulchanski, David J},
+  year={2007},
+  publisher={Centre for Urban and Community Studies, University of Toronto}
+}
 
 @article{Hwang2014,
 author = {Jackelyn Hwang and Robert J. Sampson},
@@ -54,7 +174,7 @@ author="Firebaugh, Glenn
 and Farrell, Chad R.",
 title="Still Large, but Narrowing: The Sizable Decline in Racial Neighborhood Inequality in Metropolitan America, 1980--2010",
 journal="Demography",
-year="2016",
+year={2016},
 month="Feb",
 day="01",
 volume="53",
@@ -268,7 +388,7 @@ journal = "Theoretical Computer Science",
 volume = "412",
 number = "15",
 pages = "1338 - 1349",
-year = "2011",
+year = {2011},
 note = "Theoretical Computer Science Issues in Image Analysis and Processing",
 issn = "0304-3975",
 author = "F. Malmberg and J. Lindblad and N. Sladoje and I. Nyström",
@@ -326,7 +446,7 @@ title = "A graph-based mathematical morphology reader",
 journal = "Pattern Recognition Letters",
 volume = "47",
 pages = "3 - 17",
-year = "2014",
+year = {2014},
 note = "Advances in Mathematical Morphology",
 issn = "0167-8655",
 author = "Laurent Najman and Jean Cousty",
@@ -444,7 +564,7 @@ title = "Understanding urban China with open data",
 journal = "Cities",
 volume = "47",
 pages = "53 - 61",
-year = "2015",
+year = {2015},
 note = "Current Research on Cities (CRoC)",
 issn = "0264-2751",
 author = "Xingjian Liu and Yan Song and Kang Wu and Jianghao Wang and Dong Li and Ying Long",
@@ -574,12 +694,27 @@ keywords = "China, Open data, Urban analytics"
   year={2015},
   publisher={AK Peters/CRC Press}
 }
-
-@article{soor2018extending,
-  title={Extending K-means to Preserve Spatial Connectivity},
-  author={Soor, Sampriti and Challa, Aditya and Danda, Sravan and Sagar, B Daya and Najman, Laurent},
-  year={2018}
+@article{stepinski2019imperfect,
+  title={Imperfect melting pot--Analysis of changes in diversity and segregation of US urban census tracts in the period of 1990--2010},
+  author={Stepinski, Tomasz F and Dmowska, Anna},
+  journal={Computers, Environment and Urban Systems},
+  volume={76},
+  pages={101--109},
+  year={2019},
+  publisher={Elsevier}
 }
+
+@INPROCEEDINGS{soor2018extending,
+author={S. {Soor} and A. {Challa} and S. {Danda} and B. S. {Daya Sagar} and L. {Najman}}, 
+booktitle={IGARSS 2018 - 2018 IEEE International Geoscience and Remote Sensing Symposium}, 
+title={Extending K-Means to Preserve Spatial Connectivity}, 
+year={2018}, 
+pages={6959-6962}, 
+doi={10.1109/IGARSS.2018.8518643}, 
+ISSN={2153-7003}, 
+month={July},
+}
+
 @article{Ling2016,
 author = {Chenjun Ling and Elizabeth C Delmelle},
 title = {Classifying multidimensional trajectories of neighbourhood change: a self-organizing map and k-means approach},
@@ -747,7 +882,7 @@ DOI = {10.2312/PE/VMV/VMV12/199-206}
   year={1998},
   publisher={Taylor \& Francis}
 }
-@Electronic{nhgis,
+@misc{nhgis,
   author       = {Steven Manson and Jonathan Schroeder and David Van Riper and Steven Ruggles},
   year         = {2017},
   title        = {IPUMS National Historical Geographic Information System: Version 12.0 [Database]},
@@ -853,9 +988,6 @@ DOI = {10.2312/PE/VMV/VMV12/199-206}
   title    = {A new tool for neighbourhood change research: The Canadian Longitudinal Census Tract Database, 1971–2016},
   journal  = {The Canadian Geographer / Le Géographe canadien},
   year     = {2018},
-  volume   = {0},
-  number   = {0},
-  abstract = {Abstract Performing longitudinal analysis of socio-economic change in small-area spatial units such as census tracts presents several methodological complications and requires significant data preparation. Unit boundaries are revised each census year because of changes in population and delineation methodologies. This limits cross-year comparison since data are not representative of the same spatial units. To address these problems, we have developed an innovative procedure to reduce error when comparing tract-level data across census years by apportioning data to the same areal units. This paper describes the methods used to create the Canadian Longitudinal Tract Database. Our procedure is a combination of map-matching techniques, dasymetric overlays, and population-weighted areal interpolation. The output is a set of tables with apportionment weights pertaining to pairs of unique boundary identifiers across census years, which can be linked with census data or other data with census identifiers that require longitudinal comparison.},
   doi      = {10.1111/cag.12467},
   eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/cag.12467},
   keywords = {census tracts, GIS, areal interpolation, neighbourhood change, historical geography, secteurs de recensement, SIG, interpolation spatiale, changement dans le voisinage, géographie historique},
