--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -46,15 +46,16 @@
 \newcommand{\squishend}{
   \end{list}  }
 
+\newcommand{\censure}[1]{}
 \begin{document}
 
 \maketitle
 
 
 \section{Original request for feedback}
-As part of our efforts in the Urban Genome Project of the University of Toronto,
-we are trying to build infrastructure to help understand recurrent and
-distinctive patterns of urban change.
+As part of our efforts in \censure{the Urban Genome} Project of the
+\censure{University of Toronto}, we are trying to build infrastructure to help
+understand recurrent and distinctive patterns of urban change.
 
 This effort has led to a prototype interface to allow the visual exploration of
 census data. While we plan to add additional data sources, the objective of this
@@ -63,21 +64,20 @@ for specialised analytical tools. Hopefully this will allow non-experts to be
 able to gain insight from it, but we believe that it can be helpful to experts
 as well.  
 
-This prototype is part of an article, to be submitted to the next IEEE VIS
-conference, and we are humbly requesting feedback on how effective it actually
-is.
+This prototype is part of an article, and we are humbly requesting feedback on
+how effective it actually is.
 
 The documentation that briefly explains what we did is available at:
 
-\href{http://ug.daniels.utoronto.ca/~diasf/CTEvo/doc.html}{\url{http://ug.daniels.utoronto.ca/~diasf/CTEvo/doc.html}}
+\censure{\href{http://ug.daniels.utoronto.ca/~diasf/CTEvo/doc.html}{\url{http://ug.daniels.utoronto.ca/~diasf/CTEvo/doc.html}}}
 
 The video guides demonstrating how to use the tool are available at:
 
-\href{https://www.youtube.com/watch?v=OZFUA0ThEaY&list=PLBd6KRI4PG-RcxAX35OfHd1DKl3qWfXRV}{youtube}
+\censure{\href{https://www.youtube.com/watch?v=OZFUA0ThEaY&list=PLBd6KRI4PG-RcxAX35OfHd1DKl3qWfXRV}{youtube}}
 
 And the prototype itself is available at:
 
-\href{http://ug.daniels.utoronto.ca/~diasf/CTEvo/}{\url{http://ug.daniels.utoronto.ca/~diasf/CTEvo/}}
+\censure{\href{http://ug.daniels.utoronto.ca/~diasf/CTEvo/}{\url{http://ug.daniels.utoronto.ca/~diasf/CTEvo/}}}
 
 The prototype should work on all major browsers, but in our experience Chrome
 seems to offer the best performance.
@@ -109,9 +109,9 @@ feedback is welcome.
 
 
 \section{Expert comments}
-\subsection{A - Cary Wu}
-%\href{https://soci.ubc.ca/persons/cary-wu/}{\url{https://soci.ubc.ca/persons/cary-wu/}}
-\emph{Doctoral candidate in Sociology at the University of British Columbia, Canada.}
+
+\subsection{A\censure{ - Cary Wu}}
+\censure{\emph{Doctoral candidate in Sociology at the University of British Columbia, Canada.}}
 
 \question{Does this prototype make the exploration of census data easier?}
  
@@ -158,9 +158,9 @@ survey data visualization. For example, we can develop similar tools to
 visualize the U.S. General Social Survey across different states from 1972-2016.
 
 
-\subsection{B - Ethan Fosse}
+\subsection{B\censure{ - Ethan Fosse}}
 % \href{https://scholar.harvard.edu/ethanfosse}{\url{https://scholar.harvard.edu/ethanfosse}}
-\emph{Research Associate at Princeton University, USA}
+\censure{\emph{Research Associate at Princeton University, USA}}
 
 Very cool visualization tool! To answer your questions:
 
@@ -196,8 +196,8 @@ only recommendation is to place the choice of various locations in a more
 prominent place. Typically I think of the "Gear" icon as representing more
 technical options, but the first change I made was altering the location.
 
-\subsection{C - Fernando Calderón Figueroa}
-\emph{Doctoral candidate in Sociology at the University of Toronto, Canada}
+\subsection{C \censure{- Fernando Calderón Figueroa}}
+\censure{\emph{Doctoral candidate in Sociology at the University of Toronto, Canada}}
 
 
 \textbf{Overall assessment}
@@ -252,8 +252,8 @@ sense in how the composition has evolved.
 \end{itemize}
 
 
-\subsection{D - Patrick Adler}
-\emph{Research Associate at the Martin Prosperity Institute, Canada.}
+\subsection{D\censure{ - Patrick Adler}}
+\censure{\emph{Research Associate at the Martin Prosperity Institute, Canada.}}
 
 \question{Does this prototype make the exploration of census data easier?}
 
@@ -300,8 +300,8 @@ range of metros.
 
 
 
-\subsection{E - James Murdoch}
-\emph{Policy Analyst at 2M Research, USA}
+\subsection{E\censure{ - James Murdoch}}
+\censure{\emph{Policy Analyst at 2M Research, USA}}
 
 Wow!! This is quite an undertaking and I definitely see the potential of this
 tool for understanding neighborhood dynamics overtime. Here are some uses I see
