--- a/paper/main.tex
+++ b/paper/main.tex
@@ -36,11 +36,19 @@
 \usepackage{xargs}
 \usepackage[pdftex,dvipsnames]{xcolor} 
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
-\newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
-\newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
-\newcommandx{\info}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
-\newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
-\newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
+% \newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+% \newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
+% \newcommandx{\info}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
+% \newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
+% \newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
+
+\newcommandx{\unsure}[2][1=]{}
+\newcommandx{\change}[2][1=]{}
+\newcommandx{\info}[2][1=]{}
+\newcommandx{\improvement}[2][1=]{}
+\newcommandx{\thiswillnotshow}[2][1=]{}
+
+
 
 \usepackage{natbib}
 \usepackage{algpseudocode} 
@@ -53,16 +61,16 @@
   
 
 \usepackage[switch]{lineno}
-%\linenumbers
+\linenumbers
 
 \usepackage{setspace}
 \usepackage[margin=1.25in]{geometry}
 
 \begin{document}
 
-\pagestyle{empty}
-\listoftodos[TODO]
-\newpage
+% \pagestyle{empty}
+% \listoftodos[TODO]
+% \newpage
 
 
 \doublespacing
