more text around the results

--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -23,6 +23,32 @@ year  = {2018},
 publisher = {Taylor & Francis},
 doi = {10.1080/24694452.2018.1453777}
 }
+@Inbook{Shahar2016,
+author="Shahar, Charles",
+editor="Dashefsky, Arnold
+and Sheskin, Ira M.",
+title="Jewish Population of Canada, 2015",
+bookTitle="American Jewish Year Book 2015: The Annual Record of the North American Jewish Communities",
+year={2016},
+publisher="Springer International Publishing",
+address="Cham",
+pages="261--271",
+isbn="978-3-319-24505-8",
+doi="10.1007/978-3-319-24505-8_6"
+}
+
+@article{Reibel2003,
+author = {Reibel, Michael},
+title = {Measures of Geographically Uneven Subpopulation Group Change and Local Group Transitions: Examples from Los Angeles},
+journal = {Geographical Analysis},
+volume = {35},
+number = {3},
+pages = {257-271},
+doi = {10.1111/j.1538-4632.2003.tb01113.x},
+year = {2003}
+}
+
+
 @inproceedings{rey2018spatio,
   title={Spatio-temporal analysis of socioeconomic neighborhoods: The Open Source Longitudinal Neighborhood Analysis Package (OSLNAP)},
   author={Rey, Sergio and Knaap, Elijah and Han, Su and Wolf, Levi and Kang, Wei},
