--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -12,6 +12,45 @@
   year={2019},
   publisher={University of Chicago Press}
 }
+@Article{Fong2003,
+author="Fong, Eric
+and Wilkes, Rima",
+title="Racial and Ethnic Residential Patterns in Canada",
+journal="Sociological Forum",
+year="2003",
+month="Dec",
+day="01",
+volume="18",
+number="4",
+pages="577--602",
+issn="1573-7861",
+doi="10.1023/B:SOFO.0000003004.78713.2e"
+}
+
+
+
+@article{Fong2011,
+author = {Fong, Eric and Chan, Elic},
+title = {Residential Patterns Among Religious Groups In Canadian Cities},
+journal = {City \& Community},
+volume = {10},
+number = {4},
+pages = {393-413},
+doi = {10.1111/j.1540-6040.2011.01383.x},
+year = {2011}
+}
+
+@article{Harold2018,
+author = {Harold, Joshua and Fong, Eric},
+title = {Mnemonic Institutions and Residential Clustering: Jewish Residential Patterns in Toronto},
+journal = {Canadian Review of Sociology/Revue canadienne de sociologie},
+volume = {55},
+number = {2},
+pages = {257-277},
+doi = {10.1111/cars.12192},
+year = {2018}
+}
+
 @article{Kwan2018,
 author = {Mei-Po Kwan},
 title = {The Limits of the Neighborhood Effect: Contextual Uncertainties in Geographic, Environmental Health, and Social Science Research},
