--- a/paper/study.tex
+++ b/paper/study.tex
@@ -80,9 +80,8 @@ We consider a region that is approximately the administrative border of the
 current city of Toronto, using all seven available aspects with equal weights.
 While Chicago was fairly stable, Toronto is known to be a more dynamic and
 diverse city, with significant and increasing immigrant
-population~\citep{hulchanski2007three}. Toronto is also known for a stable and
-well defined Jewish community~\citep{Shahar2016}. Therefore, we expect the
-combination of stable and dynamic regions on the results, with Place of Birth,
+population~\citep{hulchanski2007three,Fong2011}, especially Asian~\citep{Fong2003}. 
+Toronto is also known for a stable and well defined Jewish community~\citep{Harold2018, Fong2011}. Therefore, we expect the combination of stable and dynamic regions on the results, with Place of Birth,
 Home Language, and Religion identified as relevant aspects. The results are
 summarised in Figure~\ref{fig:to}, considering eight clusters.
 
@@ -153,7 +152,7 @@ cluster, including the neighbouring Bridle Path area.
 
 The geographical borders of the clusters obtained using our method are similar
 to the regions presented by previous studies considering
-Toronto~\citep{hulchanski2007three}, but our interface provides a deeper insight
+Toronto~\citep{hulchanski2007three}. However, our interface provides a deeper insight
 into their demographic composition, since we consider more data than solely
 Average Income, which appears to be a good proxy variable nonetheless. This
 scenario showcases the ability of our method and interface to capture and
@@ -163,9 +162,9 @@ understand the sources of urban volatility.
 
 We selected for this scenario a region around the metropolitan area of Los
 Angeles (LA), following urban density. While Chicago and Toronto demonstrated
-the abilities of our method for stable and dynamic cities, LA is considerably
+the abilities of our method to examine stable and dynamic cities, LA is considerably
 larger, both in population and area. Since our method identifies only the eight
-most distinct groups, we expect that some groups not to be identified,
+most distinct groups, we expect that some groups will not be identified,
 especially if their characterisation is similar to another groups. Further, our
 system does not include the census variables related to Hispanic heritage, which
 were only included in the newer censuses. However, from the literature, we
@@ -274,8 +273,8 @@ considerably, the economic and educational aspects stayed the same.
 \end{figure}
 
 
-These results are visually similar the analysis presented by
-Dellmelle~\citep{Delmelle2016}, what was there identified as 'persistently
+These results are visually similar to the analysis presented by
+Dellmelle~\citep{Delmelle2016}.  What was there identified as 'persistently
 struggling' corresponds to the purple cluster in Figure~\ref{fig:la}; some
 portions of the 'stable elite' cluster, near Inglewood, correspond to the high
 income, high education yellow cluster. The other groups identified by that study
